--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,10 @@ h1 {
 	border: solid 3px red;
 	cursor: pointer;
 }
+
+#error {
+	color: red;
+	font-weight: bold;
+	font-size: smaller;
+	margin-bottom: 7px;
+}
